文档删除改为逻辑删除
